--- a/openhab/openhab.cfg
+++ b/openhab/openhab.cfg
@@ -25,14 +25,14 @@ folder:persistence=10,persist
 # EXTERNAL = security is switched on for external requests 
 #            (e.g. originating from the Internet) only
 # (optional, defaults to 'OFF')
-#security:option=
+security:option=ON
 
 # the Netmask to define a range of internal IP-Addresses which doesn't require
 # authorization (optional, defaults to '192.168.1.0/24')
 #security:netmask=
 
 # The name of the default persistence service to use
-persistence:default=rrd4j
+persistence:default=mysql
 
 # The refresh interval for the main configuration file. A value of '-1' 
 # deactivates the scan (optional, defaults to '-1' hence scanning is deactivated)
