--- a/openhab/openhab.cfg
+++ b/openhab/openhab.cfg
@@ -118,14 +118,14 @@ chart:provider=default
 ########################## Prowl Action configuration #################################
 #
 # the apikey for authentication (generated on the Prowl website)
-#prowl:apikey=
+prowl:apikey=abcdefghijklmnopqrstuvwxyz0123456789
 
 # the default priority of a Prowl notifications (optional, defaults to '0')
-#prowl:defaultpriority=
+prowl:defaultpriority=0
 
 # the url of the Prowl public api
 # (optional, defaults to 'https://prowl.weks.net/publicapi/') 
-#prowl:url=
+prowl:url=https://api.prowlapp.com/publicapi/
 
 #################### Pushover Action configuration #####################
 #
